--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.5</version>
+		<version>3.3.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.amiya</groupId>
-	<artifactId>Spring-Boot-Demo-Project</artifactId>
+	<groupId>com.auction</groupId>
+	<artifactId>ecommerce-auction</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>Spring-Boot-Demo-Project</name>
-	<description>Demo project for Spring Boot</description>
+	<name>ecommerce-auction</name>
+	<description>E-Commerce Project with Auction</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
