--- a/pom.xml
+++ b/pom.xml
@@ -58,17 +58,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-		    <groupId>jakarta.persistence</groupId>
-		    <artifactId>jakarta.persistence-api</artifactId>
-		    
-		</dependency>
 		<!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
 		<dependency>
     		<groupId>jakarta.validation</groupId>
-    		<artifactId>jakarta.validation-api</artifactId>
-    		
+   		 	<artifactId>jakarta.validation-api</artifactId>
+    		<version>3.1.0</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
