--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 spring.application.name=E-Commerce-Auction
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/auction_db
+spring.datasource.url=jdbc:mysql://localhost:3306/Auction
 spring.datasource.username=groot
 spring.datasource.password=groot123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
-server.port = 3
+server.port = 8080
